// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Delivery Postcode render a disable input 1`] = `
<div id="deliveryPostcodeField"
     class="o-forms o-forms--wide ncf__field js-field"
     data-ui-item="form-field"
     data-ui-item-name="deliveryPostcode"
     data-validate="required"
>
  <label for="deliveryPostcode"
         class="o-forms__label"
  >
    Delivery
    <span data-reference="postcode">
      ZipCode
    </span>
  </label>
  <input type="text"
         id="deliveryPostcode"
         name="deliveryPostcode"
         placeholder="Enter your ZipCode"
         autocomplete="postal-code"
         class="o-forms__text js-field__input js-item__value"
         data-trackable="delivery-postcode"
         aria-required="true"
         required
         pattern="whatever"
         disabled
         value
  >
  <div class="o-forms__errortext">
    Please enter a valid
    <span data-reference="postcode">
      ZipCode
    </span>
    .
  </div>
</div>
`;

exports[`Delivery Postcode render a disable input 2`] = `
<div id="deliveryPostcodeField"
     class="o-forms o-forms--wide ncf__field js-field"
     data-ui-item="form-field"
     data-ui-item-name="deliveryPostcode"
     data-validate="required"
>
  <label for="deliveryPostcode"
         class="o-forms__label"
  >
    Delivery
    <span data-reference="postcode">
      ZipCode
    </span>
  </label>
  <input type="text"
         id="deliveryPostcode"
         name="deliveryPostcode"
         placeholder="Enter your ZipCode"
         autocomplete="postal-code"
         class="o-forms__text js-field__input js-item__value"
         data-trackable="delivery-postcode"
         aria-required="true"
         required
         pattern="whatever"
         disabled
         value
  >
  <div class="o-forms__errortext">
    Please enter a valid
    <span data-reference="postcode">
      ZipCode
    </span>
    .
  </div>
</div>
`;

exports[`Delivery Postcode render a postcode input with a label 1`] = `
<div id="deliveryPostcodeField"
     class="o-forms o-forms--wide ncf__field js-field"
     data-ui-item="form-field"
     data-ui-item-name="deliveryPostcode"
     data-validate="required"
>
  <label for="deliveryPostcode"
         class="o-forms__label"
  >
    Delivery
    <span data-reference="postcode">
      ZipCode
    </span>
  </label>
  <input type="text"
         id="deliveryPostcode"
         name="deliveryPostcode"
         placeholder="Enter your ZipCode"
         autocomplete="postal-code"
         class="o-forms__text js-field__input js-item__value"
         data-trackable="delivery-postcode"
         aria-required="true"
         required
         pattern="whatever"
         value
  >
  <div class="o-forms__errortext">
    Please enter a valid
    <span data-reference="postcode">
      ZipCode
    </span>
    .
  </div>
</div>
`;

exports[`Delivery Postcode render a postcode input with a label 2`] = `
<div id="deliveryPostcodeField"
     class="o-forms o-forms--wide ncf__field js-field"
     data-ui-item="form-field"
     data-ui-item-name="deliveryPostcode"
     data-validate="required"
>
  <label for="deliveryPostcode"
         class="o-forms__label"
  >
    Delivery
    <span data-reference="postcode">
      ZipCode
    </span>
  </label>
  <input type="text"
         id="deliveryPostcode"
         name="deliveryPostcode"
         placeholder="Enter your ZipCode"
         autocomplete="postal-code"
         class="o-forms__text js-field__input js-item__value"
         data-trackable="delivery-postcode"
         aria-required="true"
         required
         pattern="whatever"
         value
  >
  <div class="o-forms__errortext">
    Please enter a valid
    <span data-reference="postcode">
      ZipCode
    </span>
    .
  </div>
</div>
`;

exports[`Delivery Postcode render different styles 1`] = `
<div id="deliveryPostcodeField"
     class="o-forms o-forms--wide ncf__field js-field o-forms--error n-ui-hide"
     data-ui-item="form-field"
     data-ui-item-name="deliveryPostcode"
     data-validate="required"
>
  <label for="deliveryPostcode"
         class="o-forms__label"
  >
    Delivery
    <span data-reference="postcode">
      ZipCode
    </span>
  </label>
  <input type="text"
         id="deliveryPostcode"
         name="deliveryPostcode"
         placeholder="Enter your ZipCode"
         autocomplete="postal-code"
         class="o-forms__text js-field__input js-item__value"
         data-trackable="delivery-postcode"
         aria-required="true"
         required
         pattern="whatever"
         value
  >
  <div class="o-forms__errortext">
    Please enter a valid
    <span data-reference="postcode">
      ZipCode
    </span>
    .
  </div>
</div>
`;

exports[`Delivery Postcode render different styles 2`] = `
<div id="deliveryPostcodeField"
     class="o-forms o-forms--wide ncf__field js-field o-forms--error n-ui-hide"
     data-ui-item="form-field"
     data-ui-item-name="deliveryPostcode"
     data-validate="required"
>
  <label for="deliveryPostcode"
         class="o-forms__label"
  >
    Delivery
    <span data-reference="postcode">
      ZipCode
    </span>
  </label>
  <input type="text"
         id="deliveryPostcode"
         name="deliveryPostcode"
         placeholder="Enter your ZipCode"
         autocomplete="postal-code"
         class="o-forms__text js-field__input js-item__value"
         data-trackable="delivery-postcode"
         aria-required="true"
         required
         pattern="whatever"
         value
  >
  <div class="o-forms__errortext">
    Please enter a valid
    <span data-reference="postcode">
      ZipCode
    </span>
    .
  </div>
</div>
`;
